# WiW

./: Cargo.toml  README.md
src/: app.rs  bvh.rs  camera.rs  gpu_structs.rs  gpu_timing.rs  lib.rs  main.rs  scene.rs  sphere.rs  util_funcs.rs  wgpu_state.rs
src/raytracer/: mod.rs
src/shaders/: raytracer_kernel.wgsl  screen_shader.wgsl
