[package]
name = "wiw"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.4"
env_logger = "0.11.3"
log = "0.4.22"
wgpu = "22.0.0"
pollster = "0.3.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
glam = "0.28.0"
rand = "0.9.0-alpha.1"
#imgui = "0.12.0"
#imgui-winit-support = "0.12.0"
